--- a/AplikasiUploadExcel.Web/Views/_ViewImports.cshtml
+++ b/AplikasiUploadExcel.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using AplikasiUploadExcel.Web
-@namespace AplikasiUploadExcel.Web.Pages
+@using AplikasiUploadExcel.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
